# zero2prod

./: Cargo.toml
.github/workflows/: ci.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
tests/: health_check.rs
