[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Travis Stanley <travis@aetherx.io>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.4"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"
actix-rt = "2"
tokio = "1"
